# bevy_jam_6

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yaml
assets/levels/: level_01.ron  level_02.ron  level_03.ron  level_04.ron  level_05.ron  level_06.ron  level_07.ron  level_08.ron  level_11.ron  level_12.ron  level_20.ron  level_21.ron  level_22.ron  level_23.ron  level_24.ron  level_25.ron  sample.ron
generator/: Cargo.toml
generator/src/: main.rs
src/: audio.rs  lib.rs  main.rs
src/game_system/: item.rs  level.rs  mod.rs  run.rs  setup.rs
src/gameplay/: animation.rs  edit.rs  init_level.rs  level.rs  mod.rs  result.rs  run.rs  setup.rs
src/gameplay/animation/: color_animation.rs  mod.rs  sprite_animation.rs
src/menus/: credits.rs  main.rs  pause.rs  settings.rs
src/screens/: gameplay.rs  level_select.rs  loading.rs  mod.rs  splash.rs  title.rs
src/theme/: interaction.rs  mod.rs  palette.rs  widget.rs
