[package]
name = "bombombo"
authors = ["nebocco <nebocco@gmail.com>"]
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["wayland", "wav"] }
rand = "0.8"
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
bevy_asset_loader = { version = "0.23.0", features = ["2d"] }
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.98"
ron = "0.10.1"
bevy-persistent = { version = "0.8.0", features = ["ron"] }
dirs = "6.0.0"


[features]
default = ["dev_native"]
dev = [
    "bevy/dynamic_linking",
    "bevy/bevy_dev_tools",
    "bevy/bevy_ui_debug",
    "bevy/track_location",
]
dev_native = ["dev", "bevy/file_watcher", "bevy/embedded_watcher"]


[package.metadata.bevy_cli.release]
default-features = false

[package.metadata.bevy_cli.web]
default-features = false

[package.metadata.bevy_cli.web.dev]
features = ["dev"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(bevy_lint)"] }

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
codegen-units = 1
lto = "thin"

[profile.web-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

[profile.ci]
inherits = "dev"
opt-level = 0
debug = "line-tables-only"
codegen-units = 4

[profile.ci.package."*"]
opt-level = 0
